--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="owl.carousel.min.css">
+      <link rel="stylesheet" href="owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -36,7 +36,7 @@
    <body class="main-layout">
       <!-- loader  -->
       <!-- <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+         <div class="loader"><img src="loading.gif" alt="#" /></div>
       </div> -->
       <!-- end loader -->
       <!-- header -->
@@ -48,7 +48,7 @@
                   <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                      <div class="full">
                         <div class="center-desk">
-                           <div class="logo"> <a href="index.html"><img src="images/logo17.jpeg" alt="#" height="40px" width="80px"></a> </div>
+                           <div class="logo"> <a href="index.html"><img src="logo17.jpeg" alt="#" height="40px" width="80px"></a> </div>
                         </div>
                      </div>
                   </div>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" style="margin-top: -40px;">
                            <div class="img-box">
-                              <figure><img src="images/logo17.jpeg" alt="img" height="300px" width="200px" style="margin-left: 100px; margin-top: 100px;"/></figure>
+                              <figure><img src="logo17.jpeg" alt="img" height="300px" width="200px" style="margin-left: 100px; margin-top: 100px;"/></figure>
                            </div>
                         </div>
                      </div>
@@ -115,7 +115,7 @@
                           </div>
                           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12" style="margin-top: -40px;">
                               <div class="img-box">
-                                  <figure><img src="images/logo17.jpeg" alt="img" height="300px" width="200px" style="margin-left: 100px; margin-top: 100px;"/></figure>
+                                  <figure><img src="logo17.jpeg" alt="img" height="300px" width="200px" style="margin-left: 100px; margin-top: 100px;"/></figure>
                               </div>
                           </div>
                       </div>
@@ -148,14 +148,14 @@
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                   <div class="sport_product">
-                     <figure><img src="images/course3.jpg" alt="img"/></figure>
+                     <figure><img src="course3.jpg" alt="img"/></figure>
                      <h4>Basic stock market Course</h4>
                     <h3> Duration :<strong class="price_text">30 Hours</strong></h3>
                   </div>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 ">
                   <div class="sport_product">
-                     <figure><img src="images/course2.jpg" alt="img"/ ></figure>
+                     <figure><img src="course2.jpg" alt="img"/ ></figure>
                      <h4>Advanced Trading Strategies</h4>
                     <h3> Duration :<strong class="price_text">60 Hours</strong></h3>
                      
@@ -163,7 +163,7 @@
                </div>
                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 ">
                   <div class="sport_product">
-                     <figure><img src="images/course1.jpg" alt="img"/></figure>
+                     <figure><img src="icourse1.jpg" alt="img"/></figure>
                      <h4>Pro Trading <br>Course</h4>
                      <h3> Duration :<strong class="price_text"> 120 Hours</strong></h3>
                      
@@ -213,7 +213,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
+                              <figure><img src="trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
                            </div>
                         </div>
                      </div>
@@ -233,7 +233,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
+                              <figure><img src="trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
                            </div>
                         </div>
                      </div>
@@ -253,7 +253,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
+                              <figure><img src="trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
                            </div>
                         </div>
                      </div>
@@ -434,16 +434,16 @@
       </div>
 
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
+      <script src="jquery.min.js"></script>
+      <script src="popper.min.js"></script>
+      <script src="bootstrap.bundle.min.js"></script>
+      <script src="jquery-3.0.0.min.js"></script>
+      <script src="plugin.js"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="custom.js"></script>
       <!-- javascript --> 
-      <script src="js/owl.carousel.js"></script>
+      <script src="owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
       <script>
          $(document).ready(function(){
