--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                <div class="col-md-12 ">
                   <div class="titlepage">
                      <h2> Feedback</h2>
-                     <span style="text-align: center;"> What our Students say about Srimantha's offerings </span>
+                     <span style="text-align: center;"> What our Students say about NSE Mentor trading offerings </span>
                   </div>
                </div>
             </div>
@@ -298,7 +298,7 @@
                            <div class="john">
                               <p class="lorem_ipsum_text"> Today i also got loss but i am happy because that loses are proper trading stop loses, as from few days ago i was getting angry when i get loses, but as time moves our trading mentality also improves. All of this because of you dear sir we have learnt so much from you sir
                                  Anand</p>
-                              <div class="icon_image"><img src="images/icon-1.png"></div>
+                              <div class="icon_image"><img src="icon-1.png"></div>
                            </div>
                         </div>
     </div>
@@ -306,7 +306,7 @@
       <div class="titlepage">
                            <div class="john">
                               <p class="lorem_ipsum_text"> ATS is beauty, I am practicing for more than two years now, It took some time to understand initially, but it's really amazing, as an option buyer I am trading confidently even on expiry day. </p>
-                              <div class="icon_image"><img src="images/icon-1.png"></div>
+                              <div class="icon_image"><img src="icon-1.png"></div>
                            </div>
                         </div>
     </div>
@@ -315,7 +315,7 @@
                            <div class="john">
                               <p class="lorem_ipsum_text"> Working as govt primary school teacher. Native place is Haveri District, Ranebennur Thalluk, Kusaguru Village. I have been following you and your course since 4 months.I making profit 5k to 10k everyday..with 20k to 50k capital.Thank you sir..
                               </p>
-                              <div class="icon_image"><img src="images/icon-1.png"></div>
+                              <div class="icon_image"><img src="icon-1.png"></div>
                            </div>
                         </div>
     </div>
@@ -370,17 +370,17 @@
             <div class="row">
                <div class="col-sm-4">
                  <div class="site_info">
-                    <span class="info_icon"><img src="images/map-icon.png" /></span>
+                    <span class="info_icon"><img src="map-icon.png" /></span>
                     <span style="margin-top: 10px;"> Bengaluru,Karnataka</span></div>
                </div>
                <div class="col-sm-4">
                  <div class="site_info">
-                    <span class="info_icon"><img src="images/phone-icon.png" /></span>
+                    <span class="info_icon"><img src="phone-icon.png" /></span>
                     <span style="margin-top: 21px;">( +91 9986501000 )</span></div>
                </div>
                <div class="col-sm-4">
                  <div class="site_info">
-                    <span class="info_icon"><img src="images/email-icon.png" /></span>
+                    <span class="info_icon"><img src="email-icon.png" /></span>
                     <span style="margin-top: 21px;">Nsetreadingmentor@gmail.com</span></div>
                </div>
 
