--- a/about.html
+++ b/about.html
@@ -13,20 +13,20 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="owl.carousel.min.css">
+      <link rel="stylesheet" href="owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -45,7 +45,7 @@
                   <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                      <div class="full">
                         <div class="center-desk">
-                           <div class="logo"> <a href="index.html"><img src="images/logo17.jpeg" alt="#" height="40px" width="50px"></a> </div>
+                           <div class="logo"> <a href="index.html"><img src="logo17.jpeg" alt="#" height="40px" width="50px"></a> </div>
                         </div>
                      </div>
                   </div>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
+                              <figure><img src="trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
                            </div>
                         </div>
                      </div>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
+                              <figure><img src="trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
                            </div>
                         </div>
                      </div>
@@ -146,7 +146,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
+                              <figure><img src="trading.jpg"   height="400px" width="400px" style="max-width: 100%; border: 15px solid #fff;"/></figure>
                            </div>
                         </div>
                      </div>
@@ -169,16 +169,16 @@
       </div>
 
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
+      <script src="jquery.min.js"></script>
+      <script src="popper.min.js"></script>
+      <script src="bootstrap.bundle.min.js"></script>
+      <script src="jquery-3.0.0.min.js"></script>
+      <script src="plugin.js"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="custom.js"></script>
       <!-- javascript --> 
-      <script src="js/owl.carousel.js"></script>
+      <script src="owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
       <script>
          $(document).ready(function(){
