--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                </div>
                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 ">
                   <div class="sport_product">
-                     <figure><img src="icourse1.jpg" alt="img"/></figure>
+                     <figure><img src="course1.jpg" alt="img"/></figure>
                      <h4>Pro Trading <br>Course</h4>
                      <h3> Duration :<strong class="price_text"> 120 Hours</strong></h3>
                      
